k8s/apiservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: apiservice
  name: apiservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apiservice
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/docker-mynetwork: "true"
        io.kompose.service: apiservice
    spec:
      containers:
        - env:
            - name: SPRING_DATA_MONGODB_URI
              value: spring.data.mongodb.uri=mongodb://mongodb:27017/tcapi
          image: tcarisland/tcapi:latest
          name: spring-boot-app
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
      restartPolicy: Always
