k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: client
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  template:
    metadata:
      labels:
        io.kompose.network/docker-mynetwork: "true"
        io.kompose.service: client
    spec:
      containers:
        - image: tcarisland/tcclient:latest
          name: client
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
