k8s/dbservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: dbservice
  name: dbservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dbservice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/docker-mynetwork: "true"
        io.kompose.service: dbservice
    spec:
      containers:
        - image: mongo:latest
          name: mongodb
          ports:
            - containerPort: 27017
              hostPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: db
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
