k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: mongodb
    spec:
      containers:
        - image: mongo:latest
          name: mongodb
          ports:
            - containerPort: 27017
              hostPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: db
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
