k8s/tcapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: tcapi
  name: tcapi
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tcapi
  template:
    metadata:
      labels:
        name: tcapi
    spec:
      containers:
        - env:
            - name: SPRING_DATA_MONGODB_URI
              value: mongodb://mongodb:27017/tcapi
          image: tcarisland/tcapi:latest
          name: tcapi
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
      restartPolicy: Always
