k8s/apiservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: apiservice
  name: apiservice
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: apiservice
