k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: client
  name: client
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: client
