k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongodb
  name: mongodb
spec:
  type: NodePort     
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
