k8s/tcapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: tcapi
  name: tcapi
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    name: tcapi
